@@ -222,7 +222,6 @@ extern Tcl_ObjCmdProc
     NsTclUrl2FileObjCmd,
     NsTclUrlDecodeObjCmd,
     NsTclUrlEncodeObjCmd,
-    NsTclVarObjCmd,
     NsTclWriteContentObjCmd,
     NsTclWriteFpObjCmd,
     NsTclWriteObjCmd,
@@ -466,7 +465,6 @@ static Cmd servCmds[] = {
     {"ns_unregister_op", NULL, NsTclUnRegisterOpObjCmd},
     {"ns_unregister_url2file", NULL, NsTclUnRegisterUrl2FileObjCmd},
     {"ns_url2file", NULL, NsTclUrl2FileObjCmd},
-    {"ns_var", NULL, NsTclVarObjCmd},
     {"ns_write", NULL, NsTclWriteObjCmd},
     {"ns_writecontent", NULL, NsTclWriteContentObjCmd},
     {"nsv_append", NULL, NsTclNsvAppendObjCmd},
