@@ -203,7 +203,6 @@ ConfigServerTcl(CONST char *server)
     Tcl_InitHashTable(&servPtr->share.inits, TCL_STRING_KEYS);
     Tcl_InitHashTable(&servPtr->share.vars, TCL_STRING_KEYS);
     Ns_MutexSetName2(&servPtr->share.lock, "nstcl:share", server);
-    Tcl_InitHashTable(&servPtr->var.table, TCL_STRING_KEYS);
     Tcl_InitHashTable(&servPtr->sets.table, TCL_STRING_KEYS);
     Ns_MutexSetName2(&servPtr->sets.lock, "nstcl:sets", server);
 
